experimental/parser/testdata/parser/enum/bad-path.proto.stderr.txt
error: unexpected qualified name in enum value
  --> testdata/parser/enum/bad-path.proto:6:5
   |
 6 |     foo.bar = 1;
   |     ^^^^^^^ expected identifier

error: unexpected extension name in enum value
  --> testdata/parser/enum/bad-path.proto:7:5
   |
 7 |     (foo) = 2;
   |     ^^^^^ expected identifier

error: unexpected qualified name in enum value
  --> testdata/parser/enum/bad-path.proto:8:5
   |
 8 |     foo/bar = 3;
   |     ^^^^^^^ expected identifier

encountered 3 errors
